{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 44,
  "lineage": "adcf3950-7624-84dc-2156-bec76bbde59f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "tcb-aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:584594532862:route-table/rtb-01328b6e5c9aa8dc2",
            "default_route_table_id": "rtb-01328b6e5c9aa8dc2",
            "id": "rtb-01328b6e5c9aa8dc2",
            "owner_id": "584594532862",
            "propagating_vgws": [
              "vgw-0e091b7a2a688dec8"
            ],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020b591f0a117ca03",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e0f1503b243d54a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-vpc-igw",
            "aws_vpc.tcb-aws-vpc",
            "aws_vpn_gateway.aws-vpn-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9199462d8e9b7ad",
            "associate_with_private_ip": "172.16.0.100",
            "association_id": "eipassoc-0d3166051bb50327d",
            "domain": "vpc",
            "id": "eipalloc-0f9199462d8e9b7ad",
            "instance": "i-0e4841df948ca4fa8",
            "network_border_group": "us-west-2",
            "network_interface": "eni-06af850bb6faf677a",
            "private_dns": "ip-172-16-0-100.us-west-2.compute.internal",
            "private_ip": "172.16.0.100",
            "public_dns": "ec2-44-238-75-181.us-west-2.compute.amazonaws.com",
            "public_ip": "44.238.75.181",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.tcb-aws-vm-01",
            "aws_security_group.aws-allow-icmp",
            "aws_security_group.aws-allow-internet",
            "aws_security_group.aws-allow-ssh",
            "aws_security_group.aws-allow-vpn",
            "aws_subnet.tcb-aws-subnet1",
            "data.aws_ami.ubuntu",
            "google_compute_address.gcp-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tcb-aws-vm-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0688ba7eeeeefe3cd",
            "arn": "arn:aws:ec2:us-west-2:584594532862:instance/i-0e4841df948ca4fa8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4841df948ca4fa8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vm-ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06af850bb6faf677a",
            "private_dns": "ip-172-16-0-100.us-west-2.compute.internal",
            "private_ip": "172.16.0.100",
            "public_dns": "ec2-34-221-62-21.us-west-2.compute.amazonaws.com",
            "public_ip": "34.221.62.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-075838885205b9ba9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcf4e01f4a75d9e7",
            "tags": {
              "Name": "tcb-aws-vm-01"
            },
            "tags_all": {
              "Name": "tcb-aws-vm-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ccec1c493051de4",
              "sg-030b6725561fd9956",
              "sg-0ee025ac4750d8c5a",
              "sg-0f847d7b3063d61b6"
            ]
          },
          "dependencies": [
            "aws_security_group.aws-allow-icmp",
            "aws_security_group.aws-allow-internet",
            "aws_security_group.aws-allow-ssh",
            "aws_security_group.aws-allow-vpn",
            "aws_subnet.tcb-aws-subnet1",
            "data.aws_ami.ubuntu",
            "google_compute_address.gcp-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:584594532862:internet-gateway/igw-020b591f0a117ca03",
            "id": "igw-020b591f0a117ca03",
            "owner_id": "584594532862",
            "tags": {
              "Name": "aws-vpc-igw"
            },
            "tags_all": {
              "Name": "aws-vpc-igw"
            },
            "vpc_id": "vpc-0e0f1503b243d54a2"
          },
          "dependencies": [
            "aws_vpc.tcb-aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-allow-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:584594532862:security-group/sg-02ccec1c493051de4",
            "description": "Allow icmp access from anywhere",
            "egress": [],
            "id": "sg-02ccec1c493051de4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "aws-allow-icmp",
            "name_prefix": "",
            "owner_id": "584594532862",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e0f1503b243d54a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tcb-aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-allow-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:584594532862:security-group/sg-030b6725561fd9956",
            "description": "Allow http traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030b6725561fd9956",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aws-allow-internet",
            "name_prefix": "",
            "owner_id": "584594532862",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e0f1503b243d54a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tcb-aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:584594532862:security-group/sg-0ee025ac4750d8c5a",
            "description": "Allow ssh access from anywhere",
            "egress": [],
            "id": "sg-0ee025ac4750d8c5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-allow-ssh",
            "name_prefix": "",
            "owner_id": "584594532862",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e0f1503b243d54a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tcb-aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-allow-vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:584594532862:security-group/sg-0f847d7b3063d61b6",
            "description": "Allow all traffic from vpn resources",
            "egress": [],
            "id": "sg-0f847d7b3063d61b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.88.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "aws-allow-vpn",
            "name_prefix": "",
            "owner_id": "584594532862",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e0f1503b243d54a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tcb-aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tcb-aws-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:584594532862:subnet/subnet-0fcf4e01f4a75d9e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcf4e01f4a75d9e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584594532862",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcb-aws-subnet1"
            },
            "tags_all": {
              "Name": "tcb-aws-subnet1"
            },
            "vpc_id": "vpc-0e0f1503b243d54a2"
          },
          "dependencies": [
            "aws_vpc.tcb-aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tcb-aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:584594532862:vpc/vpc-0e0f1503b243d54a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-088d5511a12e06de6",
            "default_route_table_id": "rtb-01328b6e5c9aa8dc2",
            "default_security_group_id": "sg-0f180858538e60346",
            "dhcp_options_id": "dopt-06a53e356cdbb4e90",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e0f1503b243d54a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01328b6e5c9aa8dc2",
            "owner_id": "584594532862",
            "tags": {
              "Name": "tcb-aws-vpc"
            },
            "tags_all": {
              "Name": "tcb-aws-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "gcp-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.185.229.184",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-04-05T05:29:16.804-07:00",
            "id": "projects/tcb-gcp-aws-45/regions/us-west1/addresses/gcp-vm-ip",
            "name": "gcp-vm-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tcb-gcp-aws-45",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/regions/us-west1/addresses/gcp-vm-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gcp-allow-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-04-05T05:29:26.567-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tcb-gcp-aws-45/global/firewalls/tcb-gcp-network-gcp-allow-icmp",
            "log_config": [],
            "name": "tcb-gcp-network-gcp-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/networks/tcb-gcp-network",
            "priority": 1000,
            "project": "tcb-gcp-aws-45",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/firewalls/tcb-gcp-network-gcp-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.tcb-gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gcp-allow-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-05T05:29:26.314-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tcb-gcp-aws-45/global/firewalls/tcb-gcp-network-gcp-allow-internet",
            "log_config": [],
            "name": "tcb-gcp-network-gcp-allow-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/networks/tcb-gcp-network",
            "priority": 1000,
            "project": "tcb-gcp-aws-45",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/firewalls/tcb-gcp-network-gcp-allow-internet",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.tcb-gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gcp-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-05T05:29:26.427-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tcb-gcp-aws-45/global/firewalls/tcb-gcp-network-gcp-allow-ssh",
            "log_config": [],
            "name": "tcb-gcp-network-gcp-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/networks/tcb-gcp-network",
            "priority": 1000,
            "project": "tcb-gcp-aws-45",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/firewalls/tcb-gcp-network-gcp-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.tcb-gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gcp-allow-vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2023-04-05T05:29:26.547-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tcb-gcp-aws-45/global/firewalls/tcb-gcp-network-gcp-allow-vpn",
            "log_config": [],
            "name": "tcb-gcp-network-gcp-allow-vpn",
            "network": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/networks/tcb-gcp-network",
            "priority": 1000,
            "project": "tcb-gcp-aws-45",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/firewalls/tcb-gcp-network-gcp-allow-vpn",
            "source_ranges": [
              "172.16.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.tcb-gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "tcb-gcp-vm-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230302",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/zones/us-west1-a/disks/tcb-gcp-vm-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tcb-gcp-aws-45/zones/us-west1-a/instances/tcb-gcp-vm-01",
            "instance_id": "1546630040089838400",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "IQoXzJO9Cls=",
            "metadata_startup_script": "#!/bin/bash -xe\n\n# Copyright 2017 Google Inc.\n#\n# Licensed under the Apache License, Version 2.0 (the \"License\");\n# you may not use this file except in compliance with the License.\n# You may obtain a copy of the License at\n#\n#   http://www.apache.org/licenses/LICENSE-2.0\n#\n# Unless required by applicable law or agreed to in writing, software\n# distributed under the License is distributed on an \"AS IS\" BASIS,\n# WITHOUT WARRANTIES OR CONDITIO [...]
            "name": "tcb-gcp-vm-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.185.229.184",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/networks/tcb-gcp-network",
                "network_ip": "10.88.0.100",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/regions/us-west1/subnetworks/tcb-gcp-subnet1",
                "subnetwork_project": "tcb-gcp-aws-45"
              }
            ],
            "project": "tcb-gcp-aws-45",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/zones/us-west1-a/instances/tcb-gcp-vm-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "aws_eip.aws-ip",
            "aws_instance.tcb-aws-vm-01",
            "aws_security_group.aws-allow-icmp",
            "aws_security_group.aws-allow-internet",
            "aws_security_group.aws-allow-ssh",
            "aws_security_group.aws-allow-vpn",
            "aws_subnet.tcb-aws-subnet1",
            "data.aws_ami.ubuntu",
            "data.google_compute_zones.available",
            "google_compute_address.gcp-ip",
            "google_compute_subnetwork.tcb-gcp-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "tcb-gcp-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/tcb-gcp-aws-45/global/networks/tcb-gcp-network",
            "mtu": 0,
            "name": "tcb-gcp-network",
            "project": "tcb-gcp-aws-45",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/networks/tcb-gcp-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "gcp-router1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 65000,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-04-05T05:29:48.709-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/tcb-gcp-aws-45/regions/us-west1/routers/gcp-router1",
            "name": "gcp-router1",
            "network": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/networks/tcb-gcp-network",
            "project": "tcb-gcp-aws-45",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/regions/us-west1/routers/gcp-router1"
          },
          "dependencies": [
            "aws_customer_gateway.aws-cgw-1",
            "google_compute_ha_vpn_gateway.gcp-vpn-gw",
            "google_compute_network.tcb-gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "gcp-router2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "advertised_groups": [
                  "ALL_SUBNETS"
                ],
                "asn": 65000,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-04-05T05:29:49.022-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/tcb-gcp-aws-45/regions/us-west1/routers/gcp-router2",
            "name": "gcp-router2",
            "network": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/networks/tcb-gcp-network",
            "project": "tcb-gcp-aws-45",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/regions/us-west1/routers/gcp-router2"
          },
          "dependencies": [
            "aws_customer_gateway.aws-cgw-2",
            "google_compute_ha_vpn_gateway.gcp-vpn-gw",
            "google_compute_network.tcb-gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "gcp-router3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "advertised_groups": [
                  "ALL_SUBNETS"
                ],
                "asn": 65000,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-04-05T05:29:48.927-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/tcb-gcp-aws-45/regions/us-west1/routers/gcp-router3",
            "name": "gcp-router3",
            "network": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/networks/tcb-gcp-network",
            "project": "tcb-gcp-aws-45",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/regions/us-west1/routers/gcp-router3"
          },
          "dependencies": [
            "aws_customer_gateway.aws-cgw-2",
            "google_compute_ha_vpn_gateway.gcp-vpn-gw",
            "google_compute_network.tcb-gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "gcp-router4",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "advertised_groups": [
                  "ALL_SUBNETS"
                ],
                "asn": 65000,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-04-05T05:29:48.581-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/tcb-gcp-aws-45/regions/us-west1/routers/gcp-router4",
            "name": "gcp-router4",
            "network": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/networks/tcb-gcp-network",
            "project": "tcb-gcp-aws-45",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/regions/us-west1/routers/gcp-router4"
          },
          "dependencies": [
            "aws_customer_gateway.aws-cgw-2",
            "google_compute_ha_vpn_gateway.gcp-vpn-gw",
            "google_compute_network.tcb-gcp-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "tcb-gcp-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-05T05:29:27.417-07:00",
            "gateway_address": "10.88.0.1",
            "id": "projects/tcb-gcp-aws-45/regions/us-west1/subnetworks/tcb-gcp-subnet1",
            "ip_cidr_range": "10.88.0.0/24",
            "name": "tcb-gcp-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/global/networks/tcb-gcp-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tcb-gcp-aws-45",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tcb-gcp-aws-45/regions/us-west1/subnetworks/tcb-gcp-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.tcb-gcp-network"
          ]
        }
      ]
    }
  ]
}